Fix code header overlap the bottom border on handbook (#148)
* Fix code header overlap the bottom border

* Add comment for magic number -1.63em

--- a/source/wp-content/themes/wporg-developer/scss/prism.scss
+++ b/source/wp-content/themes/wporg-developer/scss/prism.scss
@@ -248,14 +248,28 @@ pre.line-numbers > code {
 	}
 }
 
-/* Make the sticky wp-code-block-button-container not overlap its parent's border */
+/*
+ * Make the sticky wp-code-block-button-container not overlap its parent's border.
+ * A trikcy way is used here (plus and minus margin-bottom),
+ * as we can't just adjust the pre in _global.scss,
+ * or page like https://developer.wordpress.org/resource/dashicons/#randomize would be affected.
+ */
+
 .wporg-developer-code-block {
 	display: flex;
 	flex-direction: column;
 	margin-bottom: 1.6em;
+	font-size: 16px;
 
 	&::after {
 		content: "";
+
+		/* Since the margin-bottom of the pre defined in _global.scss is 1.6em,
+		 * -1.63em is set here to make the shape of the rounded corners at the bottom of
+		 * the code block complete when the sticky wp-code-block-button-container is scolled there.
+		 *
+		 * See https://github.com/WordPress/wporg-developer/pull/148#issuecomment-1289595980
+		 */
 		margin-bottom: -1.63em;
 	}
 }
